// Vitest Snapshot v1

exports[`generate-report > it generates a report for a package with basic node_modules 1`] = `
Report {
  "dependencies": {
    "left-pad@1.3.0": {
      "dependencies": [],
      "devDependencies": [
        "benchmark@^2.1.0",
        "fast-check@0.0.8",
        "tape@*",
      ],
      "funding": undefined,
      "homepage": undefined,
      "metadata": {
        "pathsOnDisk": [
          "/node_modules/left-pad",
        ],
        "size": {
          "files": 10,
          "physical": 9752,
        },
      },
      "name": "left-pad",
      "type": "prod",
      "version": "1.3.0",
    },
  },
  "latestPackages": {},
  "pluginInfo": {},
  "root": {
    "dependencies": [
      "left-pad@1.3.0",
    ],
    "devDependencies": [],
    "funding": undefined,
    "homepage": undefined,
    "metadata": {
      "pathsOnDisk": [
        "",
      ],
    },
    "name": "min-node-modules",
    "version": "1.0.0",
  },
  "suggestions": [],
}
`;

exports[`generate-report > it generates a report for a package with no node_modules 1`] = `
Report {
  "dependencies": {},
  "latestPackages": {},
  "pluginInfo": {},
  "root": {
    "dependencies": [],
    "devDependencies": [],
    "funding": undefined,
    "homepage": undefined,
    "metadata": {
      "pathsOnDisk": [
        "",
      ],
    },
    "name": "no-node-modules",
    "version": "1.0.0",
  },
  "suggestions": [],
}
`;

exports[`generate-report > it should add latest package info if outdated packages are found 1`] = `
Report {
  "dependencies": {},
  "latestPackages": {
    "foo": "0.2.1",
  },
  "pluginInfo": {},
  "root": {
    "dependencies": [],
    "devDependencies": [],
    "funding": undefined,
    "homepage": undefined,
    "metadata": {
      "pathsOnDisk": [
        "",
      ],
    },
    "name": "no-node-modules",
    "version": "1.0.0",
  },
  "suggestions": [],
}
`;
